adicionando imagens e style.css

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div id="page">
-    <img src="" alt="">
+    <img src="/assets/main-image.jpg" alt="Imagem de um Cupcake com graos de café e um chantilly">
   </div>
   <main>
     <section id="about">
