--- a/index.html
+++ b/index.html
@@ -57,6 +57,6 @@
       </section>
     </main>
   </div>
-  
+  <footer>Feito com <img src="/assets/heart.svg" alt="Coração fofinho"> pela Rocketseat</footer>
 </body>
 </html>
